--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <!--Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ember Graphics - Twitch Overlays, Website Landing Pages, and Stream Designs">
-    <meta name="twitter:site" content="@User_Faded">
+    <meta name="twitter:site" content="@user_Faded">
     <meta name="twitter:image" content="https://embergraphics.com/images/portfolio/website.jpg">
-    <meta name="twitter:creator" content="@User_Faded">
+    <meta name="twitter:creator" content="@user_Faded">
     <meta name="twitter:url" content="https://embergraphics.com/">
     <meta name="twitter:description" content="Ember Graphics - Twitch Overlays, Website Landing Pages, and Stream Designs">
 
@@ -319,7 +319,7 @@
        <ul>
            <li>
              <span class="social-buttons-span" title="Share on Twitter">
-                       <a href="https://twitter.com/User__Faded" target="_blank">
+                       <a href="https://twitter.com/user__Faded" target="_blank">
                          <img src="images/logos/twitter.svg" class="social-buttons-span-img" />
                        </a>
              </span>
