Updated twitter link

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
        <ul>
            <li>
              <span class="social-buttons-span" title="Share on Twitter">
-                       <a href="https://twitter.com/user__Faded" target="_blank">
+                       <a href="https://twitter.com/user_Faded" target="_blank">
                          <img src="images/logos/twitter.svg" class="social-buttons-span-img" />
                        </a>
              </span>
